2008-08-21 Jonas Klink <klinktech@gmail.com>

        Reviewed by Jon Honeycutt.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20231
        Bug 20231: accNavigate: no screen element found in the specified direction should return S_FALSE

        Per <http://msdn.microsoft.com/en-us/library/ms696145(VS.85).aspx>, we should return S_FALSE
        from accNavigate if no screen element is found in the specified direction.

        * AccessibleBase.cpp:
        (AccessibleBase::accNavigate):

2008-08-21 Jonas Klink <klinktech@gmail.com>

        Reviewed by Jon Honeycutt.

        Fix http://bugs.webkit.org/show_bug.cgi?id=20230
        Bug 20230: get_accState should be testing state on childObj

        Also initializes output parameter action to 0 in get_accDefaultAction.

        * AccessibleBase.cpp:
        (AccessibleBase::get_accState):
        (AccessibleBase::get_accDefaultAction):

2008-08-20  Maxime Britto  <britto@apple.com>

        Reviewed by Ada Chan.

        rdar://5259746
        Mouse events are sent to page while resizing window (affects Gmail)
        In the WebView, if the MouseEvent is located in the resize corner, we send it back to the UIDelegate and early return.

        * Interfaces/IWebUIDelegatePrivate.idl: Add a new method to the UIDelegate to send the resize message
        * WebView.cpp:
        (WebView::handleMouseEvent): If the mouse event is in the resize corner and our UIDelegate supports the message it sends the new message and early returns

2008-08-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff Garen.

        Bring back shared JSGlobalData and implicit locking, because too many clients rely on it.

        * WebCoreStatistics.cpp:
        (WebCoreStatistics::javaScriptObjectsCount):
        (WebCoreStatistics::javaScriptGlobalObjectsCount):
        (WebCoreStatistics::javaScriptProtectedObjectsCount):
        (WebCoreStatistics::javaScriptProtectedGlobalObjectsCount):