@@ -669,6 +669,9 @@ public:
     virtual HRESULT STDMETHODCALLTYPE setCustomHTMLTokenizerChunkSize(
         /* [in] */ int chunkSize);
 
+    virtual HRESULT STDMETHODCALLTYPE backingStore(
+        /* [out, retval] */ OLE_HANDLE* hBitmap);
+
     // WebView
     WebCore::Page* page();
     bool handleMouseEvent(UINT, WPARAM, LPARAM);
