@@ -1,3 +1,14 @@
+2008-08-12  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Add SPI to get a handle to the WebView's backing store bitmap.
+
+        Reviewed by Dan Bernstein.
+
+        * Interfaces/IWebViewPrivate.idl:
+        * WebView.cpp:
+        (WebView::backingStore):
+        * WebView.h:
+
 2008-08-21 Jonas Klink <klinktech@gmail.com>
 
         Reviewed by Jon Honeycutt.
